<resources>
    <string name="app_name">AppFundacion</string>
    <string name="viewQueryEmployee">Empleados</string>
    <string name="viewDetail">Empleado</string>
    <string name="viewForm">Registrar empleado</string>
    <!-- Texto view main-->
    <string name="name_fundation">Samoyed Fundation</string>
    <string name="description">Tnx</string>
    <string name="txt_btn_1">Agregar empleado</string>
    <string name="txt_btn_2">Ver empleados</string>
    <string name="name_organization">Tim Er</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Texto de detalles-->
    <string name="nameIn">Nombre</string>
    <string name="last_nameIn">Apellidos</string>
    <string name="names">Nombre y apellidos</string>
    <string name="dni">C.I.:</string>
    <string name="gender">Genero</string>
    <string name="nacionality">Nacionalidad</string>
    <string name="cargo">Cargo</string>
    <string name="department">Departamento</string>
    <string name="birthdate">Año de nacimiento</string>
    <string name="tipo_pago">Tipo de pago</string>
    <string name="salary">Salario</string>
    <string name="telf">N° Teléfono</string>
    <string name="title_academic">Título Académico</string>
    <string name="level_academic">Nivel Académico</string>
    <string name="date_admision">Fecha de admisión</string>
    <string name="format_Date">dd/mm/yyyy</string>
    <string name="gender_male">masculino</string>
    <string name="gender_female">femenino</string>
    <string name="view_form_academic">Datos Académicos</string>
    <string name="view_form_data_work">Datos del Trabajo</string>
    <string name="view_form_personal_data">Datos Personales</string>


    <!-- button -->
    <string name="btnNext">Siguiente</string>
    <string name="btnPrevious">Anterior</string>
    <string name="btnCancel">Cancelar</string>
    <string name="btnSave">Guardar</string>
    <string name="version">version 1.0.0</string>
</resources>

